Simplify pom files
Redundant entries removed.

Signed-off-by: Matt Sicker <mattsicker@apache.org>